# Airbnb-Analysis

./: .env  .gitignore  EDA_Statitics.ipynb  London.ipynb  Madrid.ipynb  Milan.ipynb  README.md  Statitics.ipynb  analisis_csv_internacional.ipynb  checking_graphs.ipynb  colab_code.py  docker-compose.yml  pyproject.toml  requirements.txt
data/: milan_airbnb.csv
eda/: EDA_Statitics.ipynb  cleaning.ipynb  clustering.ipynb  hypothesis.ipynb  hypothesis_madrid.ipynb  uni-bi-multi-analysis.ipynb
powerbi-web/: .env.example  docker-compose.yml  index.html  styles.css
scripts/: data_merger.py
