[project]
name = "airbnb-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopy>=2.4.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "missingno>=0.5.2",
    "notebook>=7.4.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyxlsb>=1.0.10",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
